--- a/style.css
+++ b/style.css
@@ -51,13 +51,8 @@
   border-radius: 10px;
 }
 
-.whole {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .form {
-  width: 300px;
+  width: 800px;
   height: 500px;
   display: flex;
   flex-wrap: wrap;
@@ -66,4 +61,21 @@
 .note {
   width: 300px;
   height: 400px;
+}
+
+.border {
+  border-left: solid 2px;
+  border-top: solid 2px;
+  margin-left: -2px;
+  margin-top: -2px;
+  border-top-left-radius: 5px;
+}
+
+.secborder {
+  border: none;
+  border-right: solid 2px;
+  border-bottom: solid 2px;
+  margin-right: 2px;
+  margin-bottom: 2px;
+  border-bottom-right-radius: 5px;
 }
