--- a/style.css
+++ b/style.css
@@ -104,6 +104,11 @@
   font-size: 30px;
 }
 
+.day {
+  margin: 25px 35px;
+  font-size: 30px;
+}
+
 .videomemo {
   width: 300px;
   height: 560px;
