--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ input[type="color"] {
 }
 
 .tododiv {
-  width: 120px;
+  width: 140px;
   font-family: "Gowun Batang", serif;
   position: relative;
   bottom: 20px;
@@ -88,11 +88,12 @@ input[type="color"] {
 }
 
 .note {
-  width: 40%;
+  width: 70%;
   height: 570px;
   padding: 10px;
   border: none;
-  border-radius: 10px;
+  position: relative;
+  bottom: 8px;
 }
 
 .border {
@@ -157,6 +158,14 @@ input[type="color"] {
   font-family: FontAwesome;
 }
 
+.example > button {
+  background: wheat;
+  width: 30px;
+  height: 30px;
+  border-radius: 20%;
+  border: none;
+  margin: 5px;
+}
 .background {
   position: absolute;
   top: 0;
