--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
 input[type="color"] {
   font-family: FontAwesome;
 }
+
+.hidden {
+  display: none;
+}
+
 .time {
   width: 40px;
   height: 587px;
