--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@ body {
   font-family: "Gowun Batang", serif;
   line-height: 25px;
 }
-input[type="color"] {
-  font-family: FontAwesome;
-}
 
 .hidden {
   display: none;
 }
 
+.clockweather {
+  margin: 10px;
+}
 .time {
   width: 40px;
   height: 587px;
@@ -77,10 +77,11 @@ input[type="color"] {
 }
 
 .tododiv {
-  width: 140px;
-  font-family: "Gowun Batang", serif;
+  width: 130px;
+
   position: relative;
-  bottom: 20px;
+  bottom: 30px;
+  padding: 10px;
 }
 
 .todo-form > input {
@@ -90,6 +91,7 @@ input[type="color"] {
   z-index: 1;
   position: relative;
   bottom: 5px;
+  font-family: "Gowun Batang", serif;
 }
 
 .note {
@@ -121,7 +123,7 @@ input[type="color"] {
 .clockquotes {
   display: flex;
   padding-top: 5px;
-  margin: 10px 0px 10px 25px;
+  margin: 0px 0px 10px 25px;
   align-items: center;
   justify-content: space-between;
   font-size: 17px;
@@ -160,7 +162,6 @@ input[type="color"] {
   width: 60px;
   display: flex;
   margin-right: 10px;
-  font-family: FontAwesome;
 }
 
 .example > button {
@@ -194,4 +195,28 @@ input[type="color"] {
 
 .weather {
   margin: 10px;
+}
+
+.greeting {
+  display: block;
+}
+
+.colorcircle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 4px;
+  position: relative;
+  top: 3.5px;
+}
+
+.schedule-form {
+  margin-top: 10px;
+}
+.schedule-form > input {
+  background: none;
+  border: none;
+  font-family: "Gowun Batang", serif;
+  font-size: 20px;
 }
