--- a/style.css
+++ b/style.css
@@ -220,3 +220,9 @@ body {
   font-family: "Gowun Batang", serif;
   font-size: 20px;
 }
+
+.xbox {
+  width: 10px;
+  height: 10px;
+  background-color: black;
+}
