--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url(reset.css);
 body {
-  font-family: "Gowun Batang", serif;
+  font-family: "나눔손글씨 가람연꽃", serif;
   line-height: 25px;
+  font-size: 20px;
 }
 
 .hidden {
@@ -77,7 +78,7 @@ body {
 }
 
 .tododiv {
-  width: 130px;
+  width: 150px;
 
   position: relative;
   bottom: 30px;
@@ -87,11 +88,11 @@ body {
 .todo-form > input {
   border: none;
   background: none;
-  font-size: 20px;
+  font-size: 25px;
   z-index: 1;
   position: relative;
   bottom: 5px;
-  font-family: "Gowun Batang", serif;
+  font-family: "나눔손글씨 가람연꽃", serif;
 }
 
 .note {
@@ -126,7 +127,7 @@ body {
   margin: 0px 0px 10px 25px;
   align-items: center;
   justify-content: space-between;
-  font-size: 17px;
+  font-size: 20px;
 }
 .clock {
   font-size: 23px;
@@ -135,19 +136,19 @@ body {
 }
 .date {
   margin: 0px 0px 20px 25px;
-  font-size: 22px;
+  font-size: 25px;
 }
 
 .day {
   margin: 25px;
-  font-size: 24px;
+  font-size: 25px;
 }
 
 .memo {
   width: 400px;
   height: 650px;
   display: flex;
-  font-size: 15px;
+  font-size: 18px;
   flex-wrap: wrap;
 }
 
@@ -158,7 +159,7 @@ body {
 .example {
   position: relative;
   right: -20px;
-  top: 10px;
+  top: 60px;
   width: 60px;
   display: flex;
   margin-right: 10px;
@@ -217,8 +218,8 @@ body {
 .schedule-form > input {
   background: none;
   border: none;
-  font-family: "Gowun Batang", serif;
-  font-size: 20px;
+  font-family: "나눔손글씨 가람연꽃", serif;
+  font-size: 25px;
 }
 
 .xbox {
@@ -229,8 +230,13 @@ body {
 }
 
 .abox {
-  width: 10px;
-  height: 10px;
-  background-color: white;
+  width: 16px;
+  height: 16px;
+  background-image: url(images/checkbox.png);
   display: inline-block;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-right: 3px;
+  position: relative;
+  top: 1px;
 }
