--- a/style.css
+++ b/style.css
@@ -242,3 +242,11 @@ body {
   position: relative;
   top: 1px;
 }
+
+.stickerselctbox {
+  width: 254px;
+  height: 254px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: aliceblue;
+}
